--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@excalidraw/excalidraw": "^0.17.2",
     "@radix-ui/themes": "^2.0.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
