--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "@excalidraw/excalidraw": "^0.17.2",
     "@radix-ui/themes": "^2.0.3",
+    "nanoid": "^5.0.4",
+    "radash": "^11.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "zustand": "^4.4.7"
