--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@excalidraw/excalidraw": "^0.17.2",
+    "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/themes": "^2.0.3",
     "nanoid": "^5.0.4",
     "radash": "^11.0.0",
